# 6650_final_project

./: .gitignore  README.md  RuleBasedPolicy.ipynb  pyproject.toml  requirements.txt  test.py  train.py  train_a2c_poker.ipynb  train_poke.html  train_poke.ipynb  train_poke_unit_strategy.html  train_poke_unit_strategy.ipynb  train_poke_v2.html  train_poke_v2.ipynb  train_poke_v2_DQN copy.ipynb  train_poke_v2_DQN.html  train_poke_v2_shared.html  train_poke_v2_shared.ipynb
A2C/: train_a2c_poker.ipynb
A2C/runs/a2c_run_1/: reward_history.pkl
A2C/runs/a2c_run_2/: reward_history.pkl
A2C/runs/a2c_run_3/: reward_history.pkl
Baseline Policies/: RuleBased_Shallow.ipynb
checkpoints_3/: algorithm_state.pkl  rllib_checkpoint.json
checkpoints_3/policies/player_0/: policy_state.pkl
checkpoints_3/policies/player_1/: policy_state.pkl
checkpoints_3_sep/: algorithm_state.pkl  rllib_checkpoint.json
checkpoints_3_sep/policies/player_0/: policy_state.pkl
checkpoints_3_sep/policies/player_1/: policy_state.pkl
checkpoints_3_sep_30epoch/: rllib_checkpoint.json
checkpoints_3_sep_30epoch/policies/player_0/: policy_state.pkl
checkpoints_3_share_10epoch/: algorithm_state.pkl  rllib_checkpoint.json
checkpoints_3_share_10epoch/policies/shared_policy/: policy_state.pkl
checkpoints_3_shared/: algorithm_state.pkl  rllib_checkpoint.json
flappy_logs/: progress.csv
ppo/: train_poke_PPO_unit_strategy.ipynb
ppo/PPO_adversarial/: train_poke_v2_seperate_show.ipynb
runs/a2c_run_1/: reward_history.pkl
src/env/: poker_env.py
src/train/: train_a2c_poker.py
(+1 files in other folders)
