[project]
name = "poker-rl-benchmark"
version = "0.1.0"
description = "Poker RL benchmark project for DSAN 6650"
requires-python = ">=3.10"

dependencies = [
    "ray[rllib]==2.6.3",
    "pettingzoo[classic]==1.24.0",
    "supersuit>=3.7.0",
    "torch>=2.2.0",
    "gymnasium==0.26.3",
    "numpy>=1.26",
    "pandas>=2.1",
    "matplotlib>=3.8",
]

[tool.uv]
dev-dependencies = []
